30 Days Python Challenge

--- a/Day_10/Loops_Assignment.ipynb
+++ b/Day_10/Loops_Assignment.ipynb
@@ -26,7 +26,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for number in range(11):\n",
+    "    print(number)\n",
+    "\n",
+    "number = -1\n",
+    "while number < 10:\n",
+    "    number +=1\n",
+    "    print(number)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -40,7 +48,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for i in range(10,-1,-1):\n",
+    "    print(i)\n",
+    "\n",
+    "\n",
+    "x = 11\n",
+    "while x > 0:\n",
+    "    x -= 1\n",
+    "    print(x)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -54,7 +71,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for i in range(8):\n",
+    "    print('#' * i)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -68,7 +88,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for i in range(9):\n",
+    "    print('#  ' * 8)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -82,14 +105,51 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for i in range(11):\n",
+    "    print(f'{i} x {i} =  {i * i}')"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 6. Iterate through the list, ['Python', 'Numpy','Pandas','Django', 'Flask'] using a for loop and print out the items.\n",
-    "### 7. Use for loop to iterate from 0 to 100 and print only even numbers\n",
+    "### 6. Iterate through the list, ['Python', 'Numpy','Pandas','Django', 'Flask'] using a for loop and print out the items."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list = ['Python', 'Numpy','Pandas','Django', 'Flask']\n",
+    "for item in list:\n",
+    "    print(item)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 7. Use for loop to iterate from 0 to 100 and print only even numbers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(101):\n",
+    "    if i%2 == 0:\n",
+    "        print(i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 8. Use for loop to iterate from 0 to 100 and print only odd numbers"
    ]
   },
@@ -98,7 +158,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for i in range(101):\n",
+    "    if i%2==1:\n",
+    "        print(i)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -119,13 +183,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a = 0\n",
+    "for i in range(101):\n",
+    "    a += i\n",
+    "print(f'The sum of all numbers is {a}')"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1. Use for loop to iterate from 0 to 100 and print the sum of all evens and the sum of all odds"
+    "### 2. Use for loop to iterate from 0 to 100 and print the sum of all evens and the sum of all odds"
    ]
   },
   {
@@ -133,7 +202,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a = 0\n",
+    "b = 0\n",
+    "for i in range(101):\n",
+    "    if i%2 ==0:\n",
+    "        a += i\n",
+    "    else:\n",
+    "        b+=i\n",
+    "print(f'The sum of all evens is {a} and the sum of all odds is {b}')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -154,7 +232,207 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "countries = [\n",
+    "  'Afghanistan',\n",
+    "  'Albania',\n",
+    "  'Algeria',\n",
+    "  'Andorra',\n",
+    "  'Angola',\n",
+    "  'Antigua and Barbuda',\n",
+    "  'Argentina',\n",
+    "  'Armenia',\n",
+    "  'Australia',\n",
+    "  'Austria',\n",
+    "  'Azerbaijan',\n",
+    "  'Bahamas',\n",
+    "  'Bahrain',\n",
+    "  'Bangladesh',\n",
+    "  'Barbados',\n",
+    "  'Belarus',\n",
+    "  'Belgium',\n",
+    "  'Belize',\n",
+    "  'Benin',\n",
+    "  'Bhutan',\n",
+    "  'Bolivia',\n",
+    "  'Bosnia and Herzegovina',\n",
+    "  'Botswana',\n",
+    "  'Brazil',\n",
+    "  'Brunei',\n",
+    "  'Bulgaria',\n",
+    "  'Burkina Faso',\n",
+    "  'Burundi',\n",
+    "  'Cambodia',\n",
+    "  'Cameroon',\n",
+    "  'Canada',\n",
+    "  'Cape Verde',\n",
+    "  'Central African Republic',\n",
+    "  'Chad',\n",
+    "  'Chile',\n",
+    "  'China',\n",
+    "  'Colombi',\n",
+    "  'Comoros',\n",
+    "  'Congo (Brazzaville)',\n",
+    "  'Congo',\n",
+    "  'Costa Rica',\n",
+    "  \"Cote d'Ivoire\",\n",
+    "  'Croatia',\n",
+    "  'Cuba',\n",
+    "  'Cyprus',\n",
+    "  'Czech Republic',\n",
+    "  'Denmark',\n",
+    "  'Djibouti',\n",
+    "  'Dominica',\n",
+    "  'Dominican Republic',\n",
+    "  'East Timor (Timor Timur)',\n",
+    "  'Ecuador',\n",
+    "  'Egypt',\n",
+    "  'El Salvador',\n",
+    "  'Equatorial Guinea',\n",
+    "  'Eritrea',\n",
+    "  'Estonia',\n",
+    "  'Ethiopia',\n",
+    "  'Fiji',\n",
+    "  'Finland',\n",
+    "  'France',\n",
+    "  'Gabon',\n",
+    "  'Gambia, The',\n",
+    "  'Georgia',\n",
+    "  'Germany',\n",
+    "  'Ghana',\n",
+    "  'Greece',\n",
+    "  'Grenada',\n",
+    "  'Guatemala',\n",
+    "  'Guinea',\n",
+    "  'Guinea-Bissau',\n",
+    "  'Guyana',\n",
+    "  'Haiti',\n",
+    "  'Honduras',\n",
+    "  'Hungary',\n",
+    "  'Iceland',\n",
+    "  'India',\n",
+    "  'Indonesia',\n",
+    "  'Iran',\n",
+    "  'Iraq',\n",
+    "  'Ireland',\n",
+    "  'Israel',\n",
+    "  'Italy',\n",
+    "  'Jamaica',\n",
+    "  'Japan',\n",
+    "  'Jordan',\n",
+    "  'Kazakhstan',\n",
+    "  'Kenya',\n",
+    "  'Kiribati',\n",
+    "  'Korea, North',\n",
+    "  'Korea, South',\n",
+    "  'Kuwait',\n",
+    "  'Kyrgyzstan',\n",
+    "  'Laos',\n",
+    "  'Latvia',\n",
+    "  'Lebanon',\n",
+    "  'Lesotho',\n",
+    "  'Liberia',\n",
+    "  'Libya',\n",
+    "  'Liechtenstein',\n",
+    "  'Lithuania',\n",
+    "  'Luxembourg',\n",
+    "  'Macedonia',\n",
+    "  'Madagascar',\n",
+    "  'Malawi',\n",
+    "  'Malaysia',\n",
+    "  'Maldives',\n",
+    "  'Mali',\n",
+    "  'Malta',\n",
+    "  'Marshall Islands',\n",
+    "  'Mauritania',\n",
+    "  'Mauritius',\n",
+    "  'Mexico',\n",
+    "  'Micronesia',\n",
+    "  'Moldova',\n",
+    "  'Monaco',\n",
+    "  'Mongolia',\n",
+    "  'Morocco',\n",
+    "  'Mozambique',\n",
+    "  'Myanmar',\n",
+    "  'Namibia',\n",
+    "  'Nauru',\n",
+    "  'Nepal',\n",
+    "  'Netherlands',\n",
+    "  'New Zealand',\n",
+    "  'Nicaragua',\n",
+    "  'Niger',\n",
+    "  'Nigeria',\n",
+    "  'Norway',\n",
+    "  'Oman',\n",
+    "  'Pakistan',\n",
+    "  'Palau',\n",
+    "  'Panama',\n",
+    "  'Papua New Guinea',\n",
+    "  'Paraguay',\n",
+    "  'Peru',\n",
+    "  'Philippines',\n",
+    "  'Poland',\n",
+    "  'Portugal',\n",
+    "  'Qatar',\n",
+    "  'Romania',\n",
+    "  'Russia',\n",
+    "  'Rwanda',\n",
+    "  'Saint Kitts and Nevis',\n",
+    "  'Saint Lucia',\n",
+    "  'Saint Vincent',\n",
+    "  'Samoa',\n",
+    "  'San Marino',\n",
+    "  'Sao Tome and Principe',\n",
+    "  'Saudi Arabia',\n",
+    "  'Senegal',\n",
+    "  'Serbia and Montenegro',\n",
+    "  'Seychelles',\n",
+    "  'Sierra Leone',\n",
+    "  'Singapore',\n",
+    "  'Slovakia',\n",
+    "  'Slovenia',\n",
+    "  'Solomon Islands',\n",
+    "  'Somalia',\n",
+    "  'South Africa',\n",
+    "  'Spain',\n",
+    "  'Sri Lanka',\n",
+    "  'Sudan',\n",
+    "  'Suriname',\n",
+    "  'Swaziland',\n",
+    "  'Sweden',\n",
+    "  'Switzerland',\n",
+    "  'Syria',\n",
+    "  'Taiwan',\n",
+    "  'Tajikistan',\n",
+    "  'Tanzania',\n",
+    "  'Thailand',\n",
+    "  'Togo',\n",
+    "  'Tonga',\n",
+    "  'Trinidad and Tobago',\n",
+    "  'Tunisia',\n",
+    "  'Turkey',\n",
+    "  'Turkmenistan',\n",
+    "  'Tuvalu',\n",
+    "  'Uganda',\n",
+    "  'Ukraine',\n",
+    "  'United Arab Emirates',\n",
+    "  'United Kingdom',\n",
+    "  'United States',\n",
+    "  'Uruguay',\n",
+    "  'Uzbekistan',\n",
+    "  'Vanuatu',\n",
+    "  'Vatican City',\n",
+    "  'Venezuela',\n",
+    "  'Vietnam',\n",
+    "  'Yemen',\n",
+    "  'Zambia',\n",
+    "  'Zimbabwe',\n",
+    "]\n",
+    "\n",
+    "for country in countries:\n",
+    "    if 'land' in country:\n",
+    "        print(country)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -168,15 +446,71 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "fruit_list = ['banana', 'orange', 'mango', 'lemon']\n",
+    "for i in range(len(fruit_list)-1,-1,-1):\n",
+    "    print(fruit_list[i])"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3. Go to the data folder and use the countries_data.py file.\n",
-    "### i. What are the total number of languages in the data\n",
-    "### ii. Find the ten most spoken languages from the data\n",
+    "### 3. Go to the data folder and use the countries_data.py file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from country_data import countries_data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### i. What are the total number of languages in the data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "language_count = 0\n",
+    "for i in range(len(countries_data)):\n",
+    "    language_count += len(countries_data[i]['languages'])\n",
+    "print(language_count)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ii. Find the ten most spoken languages from the data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(10):\n",
+    "    print(sorted_pop[i])\n",
+    "    \n",
+    "sorted_pop[:10]\n",
+    "print(f\"most populated countries in the world with their populations: {sorted_pop[:10]} \")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### iii. Find the 10 most populated countries in the world"
    ]
   },
@@ -185,7 +519,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "population = {}\n",
+    "for i in range(len(countries_data)):\n",
+    "    keys = countries_data[i]['name']\n",
+    "    values = countries_data[i]['population']\n",
+    "    population[keys] = values\n",
+    "print(f\"Countries populations: {population}\")\n",
+    "sorted_pop = sorted(population.items(), key= lambda x:x[1],reverse=True)\n"
+   ]
   }
  ],
  "metadata": {
