--- a/Day_6/Tuples_Assignment.ipynb
+++ b/Day_6/Tuples_Assignment.ipynb
@@ -26,7 +26,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "tpl = tuple()\n",
+    "tpl1 = ()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -40,7 +43,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "my_brothers = ('Adam','Abba')\n",
+    "my_sisters = ('Husna','Fatima','Saffiyya')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -54,7 +60,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "siblings = my_brothers + my_sisters\n",
+    "print(siblings)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -68,7 +77,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(len(siblings))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -82,7 +93,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "parents = ['Abbas','Fatima']\n",
+    "family_members = siblings\n",
+    "print(\"Family_members: \",family_members)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -103,7 +118,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "*Unsiblings,father, mother = family_members\n",
+    "print(Unsiblings) \n",
+    "a,b,c,d,e,*pare = family_members\n",
+    "print(pare)  "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -117,7 +137,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "fruits = ('Apple','Orange','Banana')\n",
+    "vegetables = ('Lettuce','Spinach')\n",
+    "animal_products = ('Milk','Egg','Meat')\n",
+    "food_stuff_tp = fruits + vegetables + animal_products\n",
+    "print(food_stuff_tp)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -131,7 +157,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "food_stuff_list = list(food_stuff_tp)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -145,7 +173,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "len(food_stuff_tp)\n",
+    "food_stuff_tp[int(len(food_stuff_tp)/2)-1:int(len(food_stuff_tp)/2)+1]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -159,7 +190,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "food_stuff_list[0:3]\n",
+    "food_stuff_list[-3:]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -173,14 +207,47 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "del food_stuff_tp"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 7. Check if an item exists in tuple:\n",
-    "### -Check if 'Estonia' is a nordic country\n",
+    "### 7. Check if an item exists in tuple:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'Apple' in food_stuff_tp"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### -Check if 'Estonia' is a nordic country"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nordic_countries = ('Denmark', 'Finland','Iceland', 'Norway', 'Sweden')\n",
+    "'Estonia' in nordic_countries "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### -Check if 'Iceland' is a nordic country"
    ]
   },
@@ -189,7 +256,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "'Iceland' in nordic_countries "
+   ]
   }
  ],
  "metadata": {
