--- a/Day_7/Sets_Assignment.ipynb
+++ b/Day_7/Sets_Assignment.ipynb
@@ -24,13 +24,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "IT_companies = {'Facebook', 'Google', 'Microsoft', 'Apple', 'IBM', 'Oracle', 'Amazon'}\n",
+    "A = {19, 22, 24, 20, 25, 26}\n",
+    "B = {19, 22, 20, 25, 26, 24, 28, 27}\n",
+    "Age = [22, 19, 24, 25, 26, 24, 25, 24]\n",
+    "print('Length of it_companies set: ', len(IT_companies))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -42,13 +44,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "IT_companies.add('Twitter')\n",
+    "print(IT_companies)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -60,13 +61,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "IT_companies.update(['Samsung','Huawei','Nokia','LG'])\n",
+    "print(IT_companies)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -78,13 +78,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "IT_companies.remove('Samsung')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -94,14 +92,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "vscode": {
      "languageId": "plaintext"
     }
    },
-   "outputs": [],
    "source": []
   },
   {
@@ -121,13 +117,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print('Joining A and B: ', A.union(B)) "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -139,13 +133,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print('Intersection of A and B: ', A.intersection(B))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -157,13 +149,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print('A is a subset of B : ', A.issubset(B))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -175,13 +165,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print('A and B are disjoint: ', A.isdisjoint(B))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -193,13 +181,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print('A with B: ', A.union(B))\n",
+    "print('B with A: ', B.union(A))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -211,13 +198,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print('Symmetric difference of A and B: ',A.symmetric_difference(B))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -229,13 +214,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "del A\n",
+    "del B\n",
+    "print(B)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -254,13 +239,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "age = [22, 19, 24, 25, 26, 24, 25, 24] \n",
+    "age_st = set(age)\n",
+    "print('age_set is smaller than age(the list): ', len(age_st) < len(age))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -270,14 +255,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "vscode": {
      "languageId": "plaintext"
     }
    },
-   "outputs": [],
    "source": []
   },
   {
@@ -290,13 +273,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "sentence = 'I am a teacher and I love to inspire and teach people'\n",
+    "print('Unique words in the sentence: ',set(sentence.split()))\n",
+    "print('The number of unique words in the sentence:' , len(set(sentence.split())))"
+   ]
   }
  ],
  "metadata": {
