--- a/Day_8/Dictionaries_Assignments.ipynb
+++ b/Day_8/Dictionaries_Assignments.ipynb
@@ -26,7 +26,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "dog = dict()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -40,7 +42,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "dog['name'] = 'Oscar'\n",
+    "dog['color'] = 'Green'\n",
+    "dog['breed'] = 'African'\n",
+    "dog['legs'] = 5\n",
+    "dog['age'] = 4"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -54,7 +62,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "student = dict()\n",
+    "student.update({'first_name': 'Adam', 'last_name': 'Abbas','gender': 'male','age': 24,'marital_status': 'single','skills':['Data_Science'], 'country':'Nigeria','city': 'Kano','address': 'Plot_209_Rijiyar_Zaki'})"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -68,7 +79,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print('length of student dict: ', len(student))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -82,7 +95,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "student['skills']\n",
+    "print(type(student['skills']))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -96,7 +112,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "student['skills'].append('HTML')\n",
+    "print('Checking the modification:', student)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -110,7 +129,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print('dictionary keys as a list: ',student.keys())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -124,7 +145,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print('dictionary value as a list: ',student.values())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -138,7 +161,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print('list of tuples of dict items: ',student.items())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -152,7 +177,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "student.pop('age')\n",
+    "print(student)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -166,7 +194,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "del student\n",
+    "print(student)"
+   ]
   }
  ],
  "metadata": {
