--- a/Day_9/Conditionals_Assignment.ipynb
+++ b/Day_9/Conditionals_Assignment.ipynb
@@ -20,10 +20,10 @@
    "source": [
     "### 1. Get user input using input(“Enter your age: ”). If user is 18 or older, give feedback:  You are old enough to drive. If below 18 give feedback to wait for the missing amount of years. Output:\n",
     "* Enter your age: 30\n",
-    "* You are old enough to learn to drive.\n",
+    " * You are old enough to learn to drive.\n",
     "* Output:\n",
     "* Enter your age: 15\n",
-    "* You need 3 more years to learn to drive."
+    "*  You need 3 more years to learn to drive."
    ]
   },
   {
@@ -31,7 +31,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a = int(input('Enter your age: '))\n",
+    "if a >= 18:\n",
+    "    print('You are old enough to drive')\n",
+    "else:\n",
+    "    print(f'You need {18-a} more years to learn to drive')\n",
+    "    "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -47,7 +54,24 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "my_age = 30\n",
+    "your_age = int(input('Enter your age:'))\n",
+    "\n",
+    "\n",
+    "if my_age > your_age:\n",
+    "    if my_age - 1 == your_age:\n",
+    "        print(\"I am one year older than you\")\n",
+    "    else:\n",
+    "        print(f'I am {my_age - your_age} years older than you')\n",
+    "elif my_age < your_age:\n",
+    "    if my_age + 1 == your_age:\n",
+    "        print('You are one year older than me')\n",
+    "    else:\n",
+    "        print(f'You are {your_age - my_age} years older than me')\n",
+    "else:\n",
+    "    print('We are the same age')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -64,7 +88,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a = int(input('Enter number one:'))\n",
+    "b = int(input('Enter number two:'))\n",
+    "if a < b:\n",
+    "    print('a is smaller than b')\n",
+    "elif a > b:\n",
+    "    print('a is greater than b')\n",
+    "else:\n",
+    "    print('a is equal to b')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -86,6 +119,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "score = 60\n",
+    "\n",
+    "if score <=100 and  score >= 90:\n",
+    "    print(\"A\")\n",
+    "elif score <= 89 and score >= 70:\n",
+    "    print(\"B\")\n",
+    "elif score <=69 and score >= 60:\n",
+    "    print(\"C\")\n",
+    "elif score <= 59 and  score >= 50:\n",
+    "    print(\"D\")\n",
+    "else:\n",
+    "    print(\"F\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -97,7 +150,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "user_input = 'December'\n",
+    "if user_input == 'September' or user_input == 'October' or user_input == 'November':\n",
+    "    print(\"The season is Autumn\")\n",
+    "elif user_input == 'December' or user_input == 'January' or user_input == 'February':\n",
+    "    print('The season is Winter')\n",
+    "elif user_input == 'March' or user_input == 'April' or user_input == 'May':\n",
+    "    print('The season is Spring')\n",
+    "else:\n",
+    "    print('The season is Summer')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -113,7 +176,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "fruit = 'cashew'\n",
+    "if fruit not in fruits:\n",
+    "    fruits.append(fruit)\n",
+    "    print(fruits)\n",
+    "else: \n",
+    "    print('The fruit already exists in the list')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -140,21 +210,106 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "* Check if the person dictionary has skills key, if so print out the middle skill in the skills list.\n",
-    "* Check if the person dictionary has skills key, if so check if the person has 'Python' skill and print out the result.\n",
-    "* If a person skills has only JavaScript and React, print('He is a front end developer'), if the person skills has Node, Python, MongoDB,\n",
-    "print('He is a backend developer'), if the person skills has React, Node and MongoDB, Print('He is a fullstack developer'), else print('unknown title') - for more accurate results more conditions can be nested!\n",
-    "* If the person is married and if he lives in Finland, print the information in the following format:"
+    "person = {\n",
+    "    'first_name': 'Asabeneh',\n",
+    "    'last_name': 'Yetayeh',\n",
+    "    'age': 250,\n",
+    "    'country': 'Finland',\n",
+    "    'is_married': True,\n",
+    "    'skills': ['JavaScript', 'React', 'Node', 'MongoDB', 'Python'],\n",
+    "    'address': {\n",
+    "        'street': 'Space street',\n",
+    "        'zipcode': '02210'\n",
+    "    }\n",
+    "    }\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "* Check if the person dictionary has skills key, if so print out the middle skill in the skills list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if 'skills' in person:\n",
+    "    print(person['skills'][int(len(person['skills'])/2)])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Check if the person dictionary has skills key, if so check if the person has 'Python' skill and print out the result."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if 'skills' in person:\n",
+    "    if 'Python' in person['skills']:\n",
+    "        print(person['skills'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* If a person skills has only JavaScript and React, print('He is a front end developer'), if the person skills has Node, Python, MongoDB,\n",
+    "print('He is a backend developer'), if the person skills has React, Node and MongoDB, Print('He is a fullstack developer'), else print('unknown title') - for more accurate results more conditions can be nested!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if 'skills' in person:\n",
+    "    if 'Node' and 'MongoDB' in person['skills']:\n",
+    "        if 'React' in person['skills']:\n",
+    "            print('He is a fullstack developer')\n",
+    "        elif 'Python' in person['skills']:\n",
+    "            print('He is a backend developer')\n",
+    "    elif 'JavaScript' and 'React' in person['skills']:\n",
+    "        print('He is a frondend developer')\n",
+    "    else: \n",
+    "        print('Unknown title')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* If the person is married and if he lives in Finland, print the information in the following format:\n",
     "  ### Asabeneh Yetayeh lives in Finland. He is married."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "first_name = person['first_name']\n",
+    "last_name = person['last_name']\n",
+    "country = person['country']\n",
+    "\n",
+    "if person['is_married']==True and person['country']=='Finland':\n",
+    "    print(f'{first_name} {last_name} lives in {country}. He is married.')"
    ]
   }
  ],
