--- a/Day_2/Variables.ipynb
+++ b/Day_2/Variables.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +305,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(first_name))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(last_name))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(full_name))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(country))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(city))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -313,41 +398,36 @@
      "output_type": "stream",
      "text": [
       "<class 'str'>\n",
-      "<class 'str'>\n",
-      "<class 'str'>\n",
-      "<class 'str'>\n",
-      "<class 'str'>\n",
-      "<class 'str'>\n",
       "<class 'int'>\n",
       "<class 'bool'>\n",
       "<class 'str'>\n",
       "<class 'str'>\n"
      ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "type() takes 1 or 3 arguments",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32md:\\My Learning\\ArewaDS-30days-of-Python\\ArewaDS-30days-of-Python\\Day_2\\Variables.ipynb Cell 27\u001b[0m line \u001b[0;36m1\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/My%20Learning/ArewaDS-30days-of-Python/ArewaDS-30days-of-Python/Day_2/Variables.ipynb#X35sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mtype\u001b[39m(is_true))\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/My%20Learning/ArewaDS-30days-of-Python/ArewaDS-30days-of-Python/Day_2/Variables.ipynb#X35sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mtype\u001b[39m(is_light_on))\n\u001b[1;32m---> <a href='vscode-notebook-cell:/d%3A/My%20Learning/ArewaDS-30days-of-Python/ArewaDS-30days-of-Python/Day_2/Variables.ipynb#X35sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mtype\u001b[39;49m(first_name, last_name, country, age))\n",
-      "\u001b[1;31mTypeError\u001b[0m: type() takes 1 or 3 arguments"
-     ]
     }
    ],
    "source": [
-    "print(type(first_name))\n",
-    "print(type(last_name))\n",
-    "print(type(full_name))\n",
-    "print(type(country))\n",
-    "print(type(city))\n",
     "print(type(age))\n",
     "print(type(year))\n",
     "print(type(is_married))\n",
     "print(type(is_true))\n",
-    "print(type(is_light_on))\n",
-    "print(type(first_name, last_name, country, age))"
+    "print(type(is_light_on))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type([first_name, last_name, country, age]))"
    ]
   },
   {
@@ -359,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -407,11 +487,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_one, num_two = 5,4\n"
+    "num_one, num_two = 5,4"
    ]
   },
   {
@@ -423,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -523,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -548,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -573,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -605,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -621,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -646,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -671,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -681,14 +761,12 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32md:\\My Learning\\ArewaDS-30days-of-Python\\ArewaDS-30days-of-Python\\Day_2\\Variables.ipynb Cell 56\u001b[0m line \u001b[0;36m4\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/My%20Learning/ArewaDS-30days-of-Python/ArewaDS-30days-of-Python/Day_2/Variables.ipynb#Y106sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mmath\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/My%20Learning/ArewaDS-30days-of-Python/ArewaDS-30days-of-Python/Day_2/Variables.ipynb#Y106sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m r \u001b[39m=\u001b[39m \u001b[39minput\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mRadius of the circle: \u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/My%20Learning/ArewaDS-30days-of-Python/ArewaDS-30days-of-Python/Day_2/Variables.ipynb#Y106sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m area \u001b[39m=\u001b[39m math\u001b[39m.\u001b[39mpi \u001b[39m*\u001b[39m (\u001b[39mint\u001b[39;49m(r) \u001b[39m*\u001b[39m\u001b[39m*\u001b[39m \u001b[39m2\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/My%20Learning/ArewaDS-30days-of-Python/ArewaDS-30days-of-Python/Day_2/Variables.ipynb#Y106sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39mprint\u001b[39m(area)\n",
+      "\u001b[1;32md:\\My Learning\\ArewaDS-30days-of-Python\\ArewaDS-30days-of-Python\\Day_2\\Variables.ipynb Cell 62\u001b[0m line \u001b[0;36m2\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/My%20Learning/ArewaDS-30days-of-Python/ArewaDS-30days-of-Python/Day_2/Variables.ipynb#Y110sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m r \u001b[39m=\u001b[39m \u001b[39minput\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mRadius of the circle: \u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/My%20Learning/ArewaDS-30days-of-Python/ArewaDS-30days-of-Python/Day_2/Variables.ipynb#Y110sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m area \u001b[39m=\u001b[39m math\u001b[39m.\u001b[39mpi \u001b[39m*\u001b[39m (\u001b[39mint\u001b[39;49m(r) \u001b[39m*\u001b[39m\u001b[39m*\u001b[39m \u001b[39m2\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/My%20Learning/ArewaDS-30days-of-Python/ArewaDS-30days-of-Python/Day_2/Variables.ipynb#Y110sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mprint\u001b[39m(area)\n",
       "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: ''"
      ]
     }
    ],
    "source": [
-    "import math\n",
-    "\n",
     "r = input(\"Radius of the circle: \")\n",
     "area = math.pi * (int(r) ** 2)\n",
     "print(area)"
@@ -703,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -724,10 +802,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'keywords' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32md:\\My Learning\\ArewaDS-30days-of-Python\\ArewaDS-30days-of-Python\\Day_2\\Variables.ipynb Cell 66\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/My%20Learning/ArewaDS-30days-of-Python/ArewaDS-30days-of-Python/Day_2/Variables.ipynb#Y114sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mprint\u001b[39m(keywords)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'keywords' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "print(keywords)"
+   ]
   }
  ],
  "metadata": {
